# MiniCV

./: .gitignore  LICENSE  README.md  RELEASE_NOTES.md  build.cmd  build.fsx  build.sh  buildnative.cmd  buildnative.sh  buildnativelocal.cmd  buildnativelocal.sh  paket.dependencies
.config/: dotnet-tools.json
.github/workflows/: publish.yml
.ionide/: symbolCache.db
lib/Native/MiniCV/mac/AMD64/: MiniCVNative.dylib  libopencv_calib3d.3.4.9.dylib  libopencv_ccalib.3.4.9.dylib  libopencv_features2d.3.4.9.dylib  libopencv_imgcodecs.3.4.9.dylib
lib/Native/MiniCV/windows/AMD64/: MiniCVNative.exp  MiniCVNative.lib
src/: MiniCV.sln
src/MiniCV/: Camera.fs  CameraPose.fs  MiniCV.fsproj  OpenCV.fs  PhotoNetwork.fs  PhotoNetworkEdge.fs  PhotoPair.fs  Program.fs  Utilities.fs  paket.references  paket.template
src/MiniCVNative/: CMakeLists.txt  Makefile  Makefile.linux  MiniCVNative.cpp  MiniCVNative.h  MiniCVNative.vcxproj  MiniCVNative.vcxproj.filters  ReadMe.txt  ap3p.cpp  ap3p.h  aruco_nano.h  exports.txt  fivepoint.cpp  fivepoint.h  stdafx.cpp  stdafx.h
src/MiniCVTest/: Domain.fs  Domain.g.fs  MiniCVTest.fsproj  Program.fs  paket.references
src/Test/: Camera.fs  Program.fs  Test.fsproj  paket.references
src/Test/Properties/: launchSettings.json
